// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProfilePictureSelector /> > displays profile picture with right file type 1`] = `
<div
  aria-label="Profile picture demonstration"
  id="_picture-icon-container_ee6cb2"
>
  <label
    for="profile-picture"
  >
    Profile picture
  </label>
  <img
    alt="Current Profile picture"
    class="profile-picture"
    id="_image-demo_ee6cb2"
    src="mockBase64"
  />
  <button
    aria-label="Remove Picture"
    type="button"
  >
    Remove Picture
  </button>
</div>
`;

exports[`<ProfilePictureSelector /> > doesn't use demonstration styling when image isn't imported 1`] = `
<div
  data-testid="profile-picture-container"
  id="_picture-container_ee6cb2"
  style="grid-auto-flow: row;"
>
  <div
    id="_picture-dropbox-container_ee6cb2"
  >
    <p>
      Please select image that is in PNG or JPEG format
    </p>
    <div
      aria-label="Profile picture dropbox"
      class="dropbox"
      id="_picture-dropbox_ee6cb2"
      role="presentation"
      tabindex="0"
    >
      <input
        accept="image/jpeg,image/png"
        data-testid="picture-input"
        for="profile-picture"
        id="profile-picture"
        multiple=""
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        tabindex="-1"
        type="file"
      />
      <p>
        Drop your profile picture here!
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProfilePictureSelector /> > doesn't use demonstration styling when image isn't imported 2`] = `
<div
  data-testid="profile-picture-container"
  id="_picture-container_ee6cb2"
  style="grid-auto-flow: row;"
>
  <div
    id="_picture-dropbox-container_ee6cb2"
  >
    <div
      aria-label="Profile picture dropbox"
      class="dropbox"
      id="_picture-dropbox_ee6cb2"
      role="presentation"
      tabindex="0"
    >
      <input
        accept="image/jpeg,image/png"
        data-testid="picture-input"
        for="profile-picture"
        id="profile-picture"
        multiple=""
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        tabindex="-1"
        type="file"
      />
      <p>
        Drop your profile picture here!
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProfilePictureSelector /> > uses demonstration styling when image is imported 1`] = `
<div
  aria-label="Profile picture demonstration"
  id="_picture-icon-container_ee6cb2"
>
  <label
    for="profile-picture"
  >
    Profile picture
  </label>
  <img
    alt="Current Profile picture"
    class="profile-picture"
    id="_image-demo_ee6cb2"
    src="mockBase64"
  />
  <button
    aria-label="Remove Picture"
    type="button"
  >
    Remove Picture
  </button>
</div>
`;
